--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ footer {
 /* Text Container */
 .text-container {
   margin: 0 auto;
-  width: 20.7rem;
+  max-width: 20.7rem;
 }
 
 /* Card */
@@ -78,7 +78,7 @@ footer {
   margin: 0 auto;
   padding: 2rem;
   text-align: left;
-  width: 20.7rem;
+  max-width: 20.7rem;
 }
 
 .card p {
